sass/base.scss
* {
  box-sizing: border-box;
}

body {
  font-family: $sans;
  font-size: 16px;
  background: #fafafa;
  color: $text-color;

  @media (max-width: 768px) {
    font-size: 15px;
  }

  @media (max-width: 480px) {
    font-size: 14px;
  }
}

html, body {
  cursor: default;
}

button {
  cursor: pointer;
}

summary:focus,
summary:active {
  outline: 0;
  cursor: pointer;
}

// No spin buttons, but up-down arrow keys work
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  display: none;
}

